deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gophprofile
  labels:
    app: gophprofile
spec:
  selector:
    app: gophprofile
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
