deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gophprofile-ingress
  labels:
    app: gophprofile
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: avatars.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gophprofile
            port:
              number: 80
